# beat-the-bomb-project

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Instrucțiuni de instalare și folosire.docx  README.md  Raport de evaluare.docx  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  bomb_game.c  bomb_game.cp313-win_amd64.pyd  bomb_game.pyd  bomb_game.sln  bomb_game.vcxproj  bomb_game.vcxproj.filters  cmake_install.cmake  main.py  questions.json  requirements.txt  scores.csv  scores.json  setup.py
.github/workflows/: build.yml
_skbuild/win-amd64-3.12/cmake-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeSpec.json  bomb_game.exp  build.ninja  cmake_install.cmake  install_manifest.txt
_skbuild/win-amd64-3.13/cmake-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeSpec.json  bomb_game.exp  build.ninja  cmake_install.cmake  install_manifest.txt
_skbuild/win-amd64-3.13/cmake-install/bomb_game/: bomb_game.pyd
bomb_game/: bomb_game.c
bomb_game.dir/Debug/bomb_game.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
